--- a/Css/style.css
+++ b/Css/style.css
@@ -37,12 +37,12 @@ li {
   transform: rotate(180deg);
 }
 
-.btn-custom{
+.btn-custom {
   background-color: cadetblue;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
-#dialog{
+#dialog {
   position: relative;
   left: -2.29rem;
   top: -11rem;
@@ -65,12 +65,12 @@ li {
 
 .sbx-google__input {
   display: inline-block;
-  -webkit-transition: box-shadow .4s ease, background .4s ease;
-  transition: box-shadow .4s ease, background .4s ease;
+  -webkit-transition: box-shadow 0.4s ease, background 0.4s ease;
+  transition: box-shadow 0.4s ease, background 0.4s ease;
   border: 0;
   border-radius: 4px;
-  box-shadow: inset 0 0 0 1px #CCCCCC;
-  background: #FFFFFF;
+  box-shadow: inset 0 0 0 1px #cccccc;
+  background: #ffffff;
   padding: 0;
   padding-right: 77px;
   padding-left: 11px;
@@ -80,11 +80,14 @@ li {
   white-space: normal;
   font-size: inherit;
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
-.sbx-google__input::-webkit-search-decoration, .sbx-google__input::-webkit-search-cancel-button, .sbx-google__input::-webkit-search-results-button, .sbx-google__input::-webkit-search-results-decoration {
+.sbx-google__input::-webkit-search-decoration,
+.sbx-google__input::-webkit-search-cancel-button,
+.sbx-google__input::-webkit-search-results-button,
+.sbx-google__input::-webkit-search-results-decoration {
   display: none;
 }
 
@@ -92,26 +95,27 @@ li {
   box-shadow: inset 0 0 0 1px #b3b3b3;
 }
 
-.sbx-google__input:focus, .sbx-google__input:active {
+.sbx-google__input:focus,
+.sbx-google__input:active {
   outline: 0;
-  box-shadow: inset 0 0 0 1px #6495ED;
-  background: #FFFFFF;
+  box-shadow: inset 0 0 0 1px #6495ed;
+  background: #ffffff;
 }
 
 .sbx-google__input::-webkit-input-placeholder {
-  color: #AAAAAA;
+  color: #aaaaaa;
 }
 
 .sbx-google__input::-moz-placeholder {
-  color: #AAAAAA;
+  color: #aaaaaa;
 }
 
 .sbx-google__input:-ms-input-placeholder {
-  color: #AAAAAA;
+  color: #aaaaaa;
 }
 
 .sbx-google__input::placeholder {
-  color: #AAAAAA;
+  color: #aaaaaa;
 }
 
 .sbx-google__submit {
@@ -122,7 +126,7 @@ li {
   margin: 0;
   border: 0;
   border-radius: 0 3px 3px 0;
-  background-color: #6495ED;
+  background-color: #6495ed;
   padding: 0;
   width: 49px;
   height: 100%;
@@ -130,9 +134,9 @@ li {
   text-align: center;
   font-size: inherit;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .sbx-google__submit::before {
@@ -140,10 +144,11 @@ li {
   margin-right: -4px;
   height: 100%;
   vertical-align: middle;
-  content: '';
+  content: "";
 }
 
-.sbx-google__submit:hover, .sbx-google__submit:active {
+.sbx-google__submit:hover,
+.sbx-google__submit:active {
   cursor: pointer;
 }
 
@@ -155,7 +160,7 @@ li {
   width: 21px;
   height: 21px;
   vertical-align: middle;
-  fill: #FFFFFF;
+  fill: #ffffff;
 }
 
 .sbx-google__reset {
@@ -170,9 +175,9 @@ li {
   padding: 0;
   font-size: inherit;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   fill: rgba(0, 0, 0, 0.5);
 }
 
@@ -190,20 +195,20 @@ li {
 .sbx-google__input:valid ~ .sbx-google__reset {
   display: block;
   -webkit-animation-name: sbx-reset-in;
-          animation-name: sbx-reset-in;
-  -webkit-animation-duration: .15s;
-          animation-duration: .15s;
+  animation-name: sbx-reset-in;
+  -webkit-animation-duration: 0.15s;
+  animation-duration: 0.15s;
 }
 
 @-webkit-keyframes sbx-reset-in {
   0% {
     -webkit-transform: translate3d(-20%, 0, 0);
-            transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
     opacity: 0;
   }
   100% {
     -webkit-transform: none;
-            transform: none;
+    transform: none;
     opacity: 1;
   }
 }
@@ -211,12 +216,27 @@ li {
 @keyframes sbx-reset-in {
   0% {
     -webkit-transform: translate3d(-20%, 0, 0);
-            transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
     opacity: 0;
   }
   100% {
     -webkit-transform: none;
-            transform: none;
+    transform: none;
     opacity: 1;
   }
+}
+
+#suggestions {
+  height: 500px;
+  width: auto;
+  overflow-y: auto;
+  padding: 1rem;
+  gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.list-group-item {
+  cursor: pointer;
+  padding: 1rem;
 }
