--- a/Css/style.css
+++ b/Css/style.css
@@ -240,3 +240,40 @@ li {
   cursor: pointer;
   padding: 1rem;
 }
+
+/* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
+/** {
+  scrollbar-width: thin;
+  scrollbar-color: #6495ED #DFE9EB;
+}*/
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #DFE9EB;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #6495ED;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #557EC9;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #2F4771;
+}
