editaractivo quitar el boton de agregar

--- a/Css/style.css
+++ b/Css/style.css
@@ -42,11 +42,11 @@ li {
   color: #ffffff;
 }
 
-#dialog {
+/* #dialog {
   position: relative;
   left: -2.29rem;
   top: -11rem;
-}
+} */
 
 .sbx-google {
   display: inline-block;
