--- a/Css/style.css
+++ b/Css/style.css
@@ -227,13 +227,20 @@ li {
 }
 
 #suggestions {
-  height: 500px;
+  height: 20rem;
+  margin-top: .5rem;
   width: auto;
   overflow-y: auto;
+  overflow-x: hidden;
   padding: 1rem;
-  gap: 0.5rem;
+  gap: 0rem;
   display: flex;
   flex-direction: column;
+}
+
+#suggestions li:hover {
+  color: white;
+  font-weight: bolder;
 }
 
 .list-group-item {
