--- a/Css/style.css
+++ b/Css/style.css
@@ -279,6 +279,15 @@ li {
 }
 
 main-content {
+  width: 80%;
   display: flex;
-  flex-direction: row;
+  margin: auto;
+}
+.cPrincipal {
+  width: 100%;
+}
+.changeContent {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
 }
