fix: :art: Cambios en la visualizacion de los elementos en el dom

--- a/Css/style.css
+++ b/Css/style.css
@@ -286,9 +286,11 @@ li {
 }
 
 main-content {
-  width: 80%;
+  width: 100%;
   display: flex;
   margin: auto;
+  height: 80vh;
+  overflow-y: scroll ;
 }
 .cPrincipal {
   width: 100%;
