--- a/Boostrap/css/bootstrap-utilities.css
+++ b/Boostrap/css/bootstrap-utilities.css
@@ -5,7 +5,7 @@
  */
 :root,
 [data-bs-theme=light] {
-  --bs-blue: #0d6efd;
+  --bs-blue: #6495ed;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
