--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,10 @@
+*{
+  padding: 0;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+}
+
 li:hover {
   background-color: cornflowerblue;
   border-radius: .4rem;
@@ -338,4 +345,83 @@ main-content {
   width: 40rem;
   height: auto;
   right: 0rem;
+}
+
+.boton .linea{
+  height: 4px;
+  width: 30px;
+  border-radius: 5px;
+  background-color: cornflowerblue;
+  margin: 3px 0;
+}
+
+.boton{
+  display: block;
+  position: fixed;
+  top: 28px;
+  right: 1.5rem;
+  background-color: transparent;
+  border: 0;
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+      display: flex;
+      transform: translateX(-100%);
+      transition: transform 0.3s; 
+      z-index: 100;
+      
+    }
+  .sidebar.active{
+      transform: translateX(0);  
+  }  
+  .image-logo{
+    position: absolute;
+    width: 10rem;
+    height: auto;
+  }
+  .image-container{
+    max-width: 100%;
+    height: auto;
+    position: fixed;
+    margin: auto;
+    z-index: 10;
+    top: 50%;
+    right: 0%;
+    left: -15%;
+  }
+
+  .img-fluid{
+    max-width: 250%;
+  }
+  .changeContent{
+    height: 80vh;
+    overflow-y: scroll;
+  }
+  .cPrincipal{
+    position: fixed;
+    width: 100vw;
+    overflow-y: scroll;
+  }
+
+  .sbx-google__wrapper{
+    width: 80vw;
+  }
+}
+@media(width<900px){
+  .image-logo{
+    display: none;
+  }
+
+}
+@media (min-width: 768px) {
+  .boton{
+      display: none;
+  }
+  .container .links {
+      flex-direction: row; /* Cambia la dirección a horizontal */
+      background-color: transparent; /* Puedes ajustar el fondo según tus necesidades */   
+      position: inherit;
+      align-items: center;
+  }
 }
